# Parsing

./: .gitignore  README.md  app  meta.json  preview_readable.csv  x_data.npy  y_data.npy
hh_it_level_classifier/: README.md  app
hh_it_level_classifier/reports/: classification_report.txt
hh_it_level_classifier/resources/: meta.json  model.joblib
hh_it_level_classifier/src/hh_it_level_classifier/: cli.py  dataset.py  evaluate.py  features.py  labels.py  train.py  utils.py
hh_salary_model/: app  preds.txt  pyproject.toml
hh_salary_model/resources/: model.npz
hh_salary_model/scripts/: train.py
hh_salary_model/src/hh_salary_model/: __init__.py  cli.py  io.py  model.py
src/hh_pipeline/: context.py  handlers.py  pipeline.py
