[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hh-salary-model"
version = "0.1.0"
description = "Train and run a salary regression model for parsed hh.ru dataset"
requires-python = ">=3.10"
dependencies = ["numpy>=1.24"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]
